--- a/public/navbar.html
+++ b/public/navbar.html
@@ -77,7 +77,12 @@
          <br>
          <hr>
          <div class="text-center">Or Login With</div>
-		 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+         <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+         </fb:login-button>
+
+         <div id="status">
+         </div>
+		 
       </div>
       <div class="modal-footer">
          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
