--- a/public/edit-course.html
+++ b/public/edit-course.html
@@ -61,6 +61,7 @@
                   $scope.location = data[0].location;
                   $scope.description = data[0].description;
 				  $scope.instructor = data[0].user;
+				  $scope.students = data[0].students;
                });
               }
           }
@@ -181,17 +182,28 @@
                      </div>
                   </div>
                   <div class="col-sm-offset-4 col-sm-8">
+					 <a type="button" class="btn btn-danger" href="course?id={{id}}">Cancel</a>
                      <button type="submit" class="btn btn-success">Submit Changes</button>
-                     <a type="button" class="btn btn-danger" href="course?id={{id}}">Cancel</a>
                   </div> 
                </fieldset>
             </form>
-			<form class="form-horizontal col-sm-6" role="form">
-				<fieldset>
-					<legend>Students</legend>
-					
-				</fieldset>
-			</form>
+			<ul class="list-group col-sm-6">
+				<li class="list-group-item">
+					<div class="row">
+						<div class="col-sm-2">
+							<img id="profile-image" src="images/profile/{{studentImage}}" 
+								class="img-responsive img-rounded center-block" alt="student's profile image" width="100" height="100">
+							<h5 class="text-center">
+								<a ng-href="/profile?screen-name={{studentScreenName}}">{{studentScreenName}}</a>
+								<small><br><a href="mailto:{{studentEmail}}">{{studentEmail}}</a></small>
+							</h5>
+						</div>
+						<div class="col-sm-10">
+							<p>{{studentMessage}}</p>
+						</div>
+					</div>
+				</li>
+			</ul>
 		</div>
       </div><br>
    </div>
