Changed Keywords to Course Name

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -24,11 +24,11 @@
                         <span id="search_by">Search by</span> <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu">
-                           <li ng-click="changeParam('Keywords')"><a>Keywords</a></li>
+                           <li ng-click="changeParam('Course Name')"><a>Course Name</a></li>
                            <li ng-click="changeParam('Teacher Name')"><a>Teacher Name</a></li>
                         </ul>
                      </div>
-                     <input type="hidden" name="param" value="Keywords" id="param">
+                     <input type="hidden" name="param" value="Course Name" id="param">
                      <input type="text" class="form-control" name="terms" placeholder="Search" required>
                      <span class="input-group-btn">
                         <button id="submit" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
