--- a/public/navbar.html
+++ b/public/navbar.html
@@ -21,14 +21,14 @@
                   <div class="input-group">
                      <div class="input-group-btn search-panel" ng-controller="searchCtrl">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                        <span id="search_by">Search by</span> <span class="caret"></span>
+                        <span id="search_by">Course</span> <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu">
-                           <li ng-click="changeParam('Course Name')"><a>Course Name</a></li>
-                           <li ng-click="changeParam('Teacher Name')"><a>Teacher Name</a></li>
+                           <li ng-click="changeParam('Course')"><a>Course</a></li>
+                           <li ng-click="changeParam('User')"><a>User</a></li>
                         </ul>
                      </div>
-                     <input type="hidden" name="param" value="Course Name" id="param">
+                     <input type="hidden" name="param" value="Course" id="param">
                      <input type="text" class="form-control" name="terms" placeholder="Search" required>
                      <span class="input-group-btn">
                         <button id="submit" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
