--- a/public/categories.html
+++ b/public/categories.html
@@ -13,38 +13,28 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/navbar.js"></script>
   <script> 
-  app.controller("topCtrl", function($scope) {
-    academic = [
-           {rank: '1', course:'Linear Algebra', votes:'58', rating: '4.3'},
-           {rank: '2',course:'Chemistry',votes:'54', rating: '4.4'},
-           {rank: '3',course:'Biology',votes:'53', rating: '4.0'},
-           {rank: '4',course:'French',votes:'50', rating: '3.9'},
-           {rank: '5',course:'English For Non-speakers',votes:'47', rating: '3.8'},
-           {rank: '6',course:'Note Taking',votes:'44', rating: '4.0'},
-           {rank: '7',course:'Canadian History',votes:'43', rating: '3.7'},
-           {rank: '8',course:'Studying Strategies',votes:'38', rating: '4.0'},
-           {rank: '9',course:'Grammar',votes:'27', rating: '4.6'},
-           {rank: '10',course:'Calculus',votes:'32', rating: '3.6'}];
-    musicArts = [
-           {rank: '1', course:'Basic Guitar', votes:'58', rating: '4.3'},
-           {rank: '2',course:'Tuning Basics', votes:'54', rating: '4.4'},
-           {rank: '3',course:'Advanced Guitar',votes:'53', rating: '4.0'},
-           {rank: '4',course:'Sheet Music',votes:'50', rating: '3.9'},
-           {rank: '5',course:'Photoshop',votes:'47', rating: '3.8'},
-           {rank: '6',course:'Topography',votes:'44', rating: '4.0'},
-           {rank: '7',course:'Basic Drawing',votes:'43', rating: '3.7'},
-           {rank: '8',course:'Garage Band',votes:'38', rating: '4.0'},
-           {rank: '9',course:'Piano',votes:'27', rating: '4.6'},
-           {rank: '10',course:'Painting',votes:'32', rating: '3.6'}];
-    $scope.changeList = function(category) {
-      if(category == 'Academic') {
-        $scope.topList = academic;
-      }
-      else {
-        $scope.topList = musicArts;
-      }
+  app.controller("topCtrl", function($scope, $http) {
+    $scope.changeList = function(type) {
+      var req = { 
+          method: 'POST',
+          url: '/top',
+          data: $.param({category : type}),
+          headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+        };
+        $http(req).success(function(data) {
+          $scope.topList = data;
+      });
     };
-    $scope.topList = academic;
+
+    var req = { 
+          method: 'POST',
+          url: '/top',
+          data: $.param({category : 'Academic'}),
+          headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+        };
+        $http(req).success(function(data) {
+          $scope.topList = data;
+      });
   });
 
   $(document).ready(function(){
@@ -64,7 +54,8 @@
 <div class="jumbotron text-center">
   <h1>Categories</h1>
   <p>Select one of these categories and browse through the courses offered in that subject area</p>
-  <a href="" ng-click="show = !show" class="btn btn-primary">Look At Top 10 Courses</a>
+  <a href="" ng-show="!show" ng-click="show = !show" class="btn btn-primary">Look At Top 10 Courses</a>
+  <a href="" ng-show="show"  ng-click="show = !show" class="btn btn-primary">Look At Categories</a>
 </div>
 
 <div ng-hide="show">
@@ -138,17 +129,18 @@
             <h1 align="center">Top 10 Courses</h1>
             <ul class="nav nav-pills">
                <li class="active" ng-click="changeList('Academic')"><a>Academic</a></li>
-               <li ng-click="changeList('Music/Art')"><a>Music/Art</a></li>
-               <li ng-click="changeList()"><a>Cooking</a></li>
-               <li ng-click="changeList()"><a>Home-Related</a></li>
-               <li ng-click="changeList()"><a>Office/Document</a></li>
-               <li ng-click="changeList()"><a>Sports/Gaming</a></li>
-               <li ng-click="changeList()"><a>Technological</a></li>
-               <li ng-click="changeList()"><a>Miscellaneous</a></li>
+               <li ng-click="changeList('Music and Arts')"><a>Music/Art</a></li>
+               <li ng-click="changeList('Cooking')"><a>Cooking</a></li>
+               <li ng-click="changeList('Home-Related')"><a>Home-Related</a></li>
+               <li ng-click="changeList('Office Skills')"><a>Office/Document</a></li>
+               <li ng-click="changeList('Sports and Games')"><a>Sports/Gaming</a></li>
+               <li ng-click="changeList('Technology')"><a>Technological</a></li>
+               <li ng-click="changeList('Miscellaneous')"><a>Miscellaneous</a></li>
             </ul> <br>
             <div>
                 <ul class="list-group col-sm-6 col-sm-offset-3">
-                  <li class="list-group-item" ng-repeat="x in topList"> {{ x.rank + ') '}}<a>{{x.course}}</a>
+                  <li class="list-group-item list-group-item-info">Courses<div class="pull-right">Votes Rating</div></li>
+                  <li class="list-group-item" ng-repeat="x in topList"> {{ x.rank + ') '}}<a href="course?id={{x.id}}">{{x.title}}</a>
                     <span class="badge" data-toggle="tooltip" title="# of votes">{{x.votes}}</span>
                     <span class="badge  badge-success" data-toggle="tooltip" title="rating">{{x.rating}}</span>
                   </li>
