--- a/public/navbar.html
+++ b/public/navbar.html
@@ -76,13 +76,13 @@
          </form>
          <br>
          <hr>
-         <div class="text-center">Or Login With</div>
-         <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-         </fb:login-button>
+         <div class="text-center">Or Login With <br>
+            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+            </fb:login-button>
 
-         <div id="status">
-         </div>
-		 
+            <div id="status">
+            </div>
+		   </div>
       </div>
       <div class="modal-footer">
          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
