--- a/public/admin.html
+++ b/public/admin.html
@@ -26,6 +26,8 @@
       <li ng-class="{ 'active': use}"><a ng-click="getlist('Users')" >Users</a></li>
       <li ng-class="{ 'active': !use}"><a ng-click="getlist('Courses')">Courses</a></li>
     </ul>
+    <br>
+    <button class="btn btn-default" data-toggle="modal" data-target="#adminModal" type="set">Make Admin</button>
   </nav>
   <div class="col-sm-9">
     <div class="panel panel-primary " > 
@@ -33,7 +35,7 @@
       <div class="panel-body">
         <form name="searchform" class="navbar-form" ng-submit="findItem()" method="GET">
           <div class="input-group">
-             <input type="text" class="form-control" ng-model="searchID" placeholder="Search By ID" required>
+             <input type="text" class="form-control" ng-model="searchID" placeholder="Search {{title}}" required>
              <span class="input-group-btn">
                 <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
              </span>
@@ -64,18 +66,30 @@
       </div>
     </div>
   </div>
+
+<div class="modal fade" id="adminModal">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">Set Admin Status</div>
+      <div class="modal-body">
+        <input type="text" class="form-control" ng-modal="sname" placeholder="Screen Name" maxlength="50">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
 
-
-
 <div class="panel-footer" >
-    <div class="container">
-      <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus">About Us</a> | 
-        <a href="https://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
-        <a href="https://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
-        <a href="https://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
-      </p>
-    </div>
+  <div class="container">
+    <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus">About Us</a> | 
+      <a href="https://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
+      <a href="https://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
+      <a href="https://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
+    </p>
+  </div>
 </div>
 
 </body>
