--- a/public/admin.html
+++ b/public/admin.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="confirmModal">
+    <div class="modal fade" id="confirmModal">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-body">
@@ -65,22 +65,23 @@
         </div>
       </div>
     </div>
-  </div>
-
-<div class="modal fade" id="adminModal">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">Set Admin Status</div>
-      <div class="modal-body">
-        <input type="text" class="form-control" ng-modal="sname" placeholder="Screen Name" maxlength="50">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <div class="modal fade" id="adminModal">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">Set Admin Status</div>
+          <div class="modal-body">
+            <input type="text" class="form-control" ng-model="sname" placeholder="Screen Name" maxlength="50">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="setAdmin()">Confirm</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
 
 <div class="panel-footer" >
   <div class="container">
