--- a/public/course.html
+++ b/public/course.html
@@ -137,7 +137,7 @@
 						var req = { 
 							method: 'POST',
 							url: '/search/one',
-							data: $.param({type: 'course', id : param}),
+							data: $.param({type: 'course-id', id : param}),
 							headers: {'Content-Type': 'application/x-www-form-urlencoded'}
 						};
 						$http(req).success(function(data) {
@@ -163,7 +163,12 @@
 							headers: {'Content-Type': 'application/x-www-form-urlencoded'}
 							};
 							$http(req).success(function(data) {
-								$scope.admin = data[0].admin;
+								if (data.length < 1) {
+									$scope.admin = false;
+								}
+								else {
+									$scope.admin = data[0].admin;
+								}
 							});
 						});
 					}
@@ -196,11 +201,11 @@
 					}
 					
 					$scope.disableEnroll = function(){
-						if ($scope.students.enrolled.indexOf($scope.session) >= 0){
+						if (typeof $scope.students != 'undefined' && $scope.students.enrolled.indexOf($scope.session) >= 0){
 							$scope.enrollText = "You have enrolled";
 							return true;
 						}
-						else if ($scope.students.in_application.indexOf($scope.session) >= 0){
+						else if (typeof $scope.students != 'undefined' && $scope.students.in_application.indexOf($scope.session) >= 0){
 							$scope.enrollText = "You have applied";
 							return true;
 						}
@@ -210,7 +215,7 @@
 						}
 					}
 					
-					$scope.enroll = function(){
+					$scope.enroll = function() {
 						if ($scope.session && $scope.session != "Guest" && $scope.session != $scope.screen_name){
 							var req = {
 								method: 'POST',
