--- a/public/navbar.html
+++ b/public/navbar.html
@@ -150,7 +150,7 @@
          <div class="modal-body text-center">
             <div> Are you sure you want logout?</div> <br>
             <form action="logout" method="GET">
-               <button class="btn btn-lg btn-primary" type="submit">Logout</button>
+               <button class="btn btn-lg btn-primary" onclick="logout()" type="submit">Logout</button>
             </form>
          </div>
          <div class="modal-footer">
