--- a/public/categories.html
+++ b/public/categories.html
@@ -6,12 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/categories.css">
+  <link rel="stylesheet" href="css/categories.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="scripts/app.js"></script>
-  <script src="scripts/navbar.js"></script>
   <script> 
   app.controller("topCtrl", function($scope, $http) {
     $scope.changeList = function(type) {
@@ -46,7 +45,7 @@
   </script>
 </head>
 <body ng-app="learnologyApp" >
-
+<script src="scripts/facebooklogin.js"></script>
 <div ng-controller="navCtrl"> 
   <div ng-include="'navbar.html'"></div>
 </div>
