--- a/public/admin.html
+++ b/public/admin.html
@@ -10,11 +10,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="scripts/app.js"></script>
-  <script src="scripts/navbar.js"></script>
   <script src="scripts/admincontroller.js"></script>
 </head>
 <body ng-app="learnologyApp" >
- 
+ <script src="scripts/facebooklogin.js"></script>
 <div ng-controller="navCtrl"> 
   <div ng-include="'navbar.html'"></div>
 </div> <br>
