--- a/public/edit-profile.html
+++ b/public/edit-profile.html
@@ -12,9 +12,9 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 		<script src="scripts/app.js"></script>
 		<script src="scripts/edit-profile.js"></script>
-		<script src="scripts/navbar.js"></script>
 	</head>
 	<body ng-app="learnologyApp">
+		<script src="scripts/facebooklogin.js"></script>
 		<div ng-controller="navCtrl"> 
 			<div ng-include="'navbar.html'"></div>
 		</div>
