--- a/public/search.html
+++ b/public/search.html
@@ -16,11 +16,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="scripts/app.js"></script>
-  <script src="scripts/navbar.js"></script>
   
 </head>
 
 <body ng-app="learnologyApp" >
+  <script src="scripts/facebooklogin.js"></script>
  <div search-res></div>
   <div ng-controller="navCtrl"> 
     <div ng-include="'navbar.html'"></div>
